--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -433,6 +433,9 @@ ul#nav li.current a { color: #F06000; }
 #portfolio-wrapper {
    display: flex;
    flex-wrap: wrap;
+   flex-wrap: wrap;
+   justify-content: space-between;
+
 }
 
 /* Portfolio Content */
